--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Aref+Ruqaa:wght@400;700&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Calibri', 'Almarai', sans-serif;
         background-color: #f8fafc;
+      }
+      .font-diwani {
+        font-family: 'Aref Ruqaa', serif;
       }
       /* Ensure sticky header works well */
       .sticky-header {
