--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "jspdf": "https://esm.sh/jspdf@^3.0.4",
-    "html2canvas": "https://esm.sh/html2canvas@^1.4.1",
-    "xlsx": "https://esm.sh/xlsx@0.18.5"
+    "html2canvas": "https://esm.sh/html2canvas@^1.4.1"
   }
 }
 </script>
